--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-slick": "^0.23.1",
     "react-social-media-bar": "^0.0.4",
     "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.3"
   },
