--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-social-media-bar": "^0.0.4",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.3"
   },
